--- a/index.html
+++ b/index.html
@@ -22,12 +22,12 @@
             </div>
             
             <div class="form-group">
-              <label for="class">Class:</label>
-              <input type="text" id="class" name="class" required>
+              <label for="email">Email:</label>
+              <input type="email" id="email" name="email" required>
             </div>
             <div class="form-group">
-              <label for="rollnumber">Roll Number:</label>
-              <input type="text" id="rollnumber" name="rollnumber" required>
+              <label for="contact">Contact:</label>
+              <input type="number" id="contact" name="contact" required>
             </div>
             <div class="form-group">
               <input type="submit" value="Submit">
